tests/semantic/invalid/unknown_tensor_infer.short
model classifier {
  format onnx;
  path "models/classifier.onnx";
  task "image_classification";
  precision int8;
  input_shape "1,3,224,224";
  output_shape "1,1000";
  backend_preference onnxruntime_cpu, fallback;
  compact true;
  quality_guardrail accuracy >= 90;
};
infer classifier(missing_tensor) -> result;
